# binaryen-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
config/cc/: CONFIG.bzl  config.h
src/: BUILD.bazel
src/abi/: BUILD.bazel
src/analysis/: BUILD.bazel
src/asmjs/: BUILD.bazel
src/cfg/: BUILD.bazel
src/dataflow/: BUILD.bazel
src/emscripten-optimizer/: BUILD.bazel
src/ir/: BUILD.bazel
src/passes/: BUILD.bazel  BUILD.bzl
src/support/: BUILD.bazel
src/tools/: BUILD.bazel  rules.bzl  textfile_to_binary.c
src/tools/fuzzing/: BUILD.bazel
src/tools/wasm-split/: BUILD.bazel
src/wasm/: BUILD.bazel
