load("//config/cc:CONFIG.bzl", "BASE_COPTS", "TOOLCHAINS")

COPTS = BASE_COPTS

cc_library(
    name = "analysis",
    srcs = glob(["*.cpp", "*.h"]) + [
        "//src/cfg:cfg-traversal.h"
    ],
    additional_compiler_inputs = ["//src:wasm-delegations"],
    deps = ["//src/cfg", "//src/support"],
    copts = COPTS + ["-I$(@)/src"],
    toolchains = TOOLCHAINS,
    visibility = [
        "//src:__pkg__",
        "//src/ir:__pkg__"
    ]
)

