load("//config/cc:CONFIG.bzl", "BASE_COPTS", "TOOLCHAINS")

COPTS = BASE_COPTS

cc_binary(
    name = "wasm-split",
    srcs = [
        "//src:wasm-hdrs",
    ] + glob(["*.h"]),
    deps = [
        "//src:binaryen",
        ":wasm-split-impl",
    ],
    copts = COPTS + ["-I$(@)/src"],
    toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

cc_library(
    name = "wasm-split-impl",
    srcs = [
        "wasm-split.cpp",
        "split-options.cpp",
        "instrumenter.cpp",
        "//src:wasm-hdrs",
        "//src/tools:tool-options.h"
    ] + glob(["*.h"]),
    additional_compiler_inputs = ["//src:wasm-delegations"],
    deps = ["//src/support"],
    copts = COPTS + ["-I$(@)/src"],
    toolchains = TOOLCHAINS,
)

